--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   
   
   
-  <meta name="description" content="BryantWang一个执着于科比精神的码农">
+  <meta name="description" content="一个执着于科比精神的码农">
 <meta property="og:type" content="website">
 <meta property="og:title" content="BryantWang's Blog">
 <meta property="og:url" content="http://yoursite.com/index.html">
 <meta property="og:site_name" content="BryantWang's Blog">
-<meta property="og:description" content="BryantWang一个执着于科比精神的码农">
+<meta property="og:description" content="一个执着于科比精神的码农">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="BryantWang's Blog">
-<meta name="twitter:description" content="BryantWang一个执着于科比精神的码农">
+<meta name="twitter:description" content="一个执着于科比精神的码农">
   
     <link rel="alternate" href="/atom.xml" title="BryantWang&#39;s Blog" type="application/atom+xml">
   
@@ -97,7 +97,7 @@
         
           <div class="homelogoback"  style="border: 1px solid #404040;" >
             <h1><a href="#content" id="logo">BryantWang&#39;s Blog</a></h1>
-            <h3>BryantWang一个执着于科比精神的码农</h3>
+            <h3>一个执着于科比精神的码农</h3>
             <h5>BryantWang</h5>
             <!-- <p><a href="https://github.com/iTimeTraveler" target="_blank">Github</a></p> -->
           </div>
