--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
     <link rel="alternate" href="/atom.xml" title="BryantWang&#39;s Blog" type="application/atom+xml">
   
-  <link rel="icon" href="/css/images/mylogo.jpg">
+  <link rel="icon" href="/css/images/kobe.png">
   
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
   
@@ -57,7 +57,7 @@
   
     <div id="intrologo" class="intro-logo" style="background-position:center; background-repeat:no-repeat; background-image: url(); background-size: auto 100%;">
     <script>
-        var imgUrls = "css/images/home-bg.jpg,css/images/sample.jpg,http://t.cn/RMbvEza".split(",");
+        var imgUrls = "css/images/home-bg.jpg,css/images/pose.jpg,http://t.cn/RMbvEza".split(",");
         var random = Math.floor((Math.random() * imgUrls.length ));
         if (imgUrls[random].startsWith('http') || imgUrls[random].indexOf('://') >= 0) {
           document.getElementById("intrologo").style.backgroundImage='url(' + imgUrls[random] + ')';
