--- a/impress/index.html
+++ b/impress/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-        <p>aaaa <b>A</b> <span class="thoughts">aaaaaa</span></p>
+        <p style="font-size:18px">都看这么久了是时候贴出本人照片了<br/><br/><img src="MyPhoto.JPG" width="300" height="400" /><br/><span style="font-size:18px" class="thoughts">是不是很帅啊O(∩_∩)O哈哈~</span></p>
     </div>
 
 
@@ -55,7 +55,7 @@
     </div>
 
     <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p>我有两个小三 <b>代码</b>和  <b class="imagination">篮球</b></p>
+        <p>我有两个小情人 <b>代码</b>和  <b class="imagination">篮球</b></p>
     </div>
 
     <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
